--- a/glossary.html
+++ b/glossary.html
@@ -94,10 +94,10 @@
 				</div>
 			</div>
 			<div class="glossary lowerItem">
-				<p class="glossaryNotes">*以下、作中での登場順となっています。</p>
+				<p class="glossaryNotes">*이하, 작품에서의 등장순서로 되어 있습니다.</p>
 				<div class="glossaryNezumiBox">
 					<p class="glossaryNezumi">
-						<img src="/books/20thdenmoku/img/glossary/glossaryNezumi.png">
+						<img src="/glossaryNezumi.png">
 					</p>
 				</div>
 				<div class="glossaryBox lowerBox">
@@ -188,7 +188,7 @@
 				</div>
 
 				<div class="back">
-					<a href="/books/20thdenmoku/#special">
+					<a href="https://20thdenmoku.github.io/#special">
 					<span></span>BACK
 					</a>
 				</div>
