--- a/glossary.html
+++ b/glossary.html
@@ -102,24 +102,24 @@
 				</div>
 				<div class="glossaryBox lowerBox">
 					<div class="glossaryIndiv1 glossaryIndiv">
-						<p class="name">明治時代</p>
-						<p class="text">新暦1868年1月25日から1912年7月30日までの時代を指す。日本が西洋列強に負けないために、近代国家として成長していった時代。</p>
+						<p class="name">메이지 시대</p>
+						<p class="text">양력 1868년 1월 25일부터 1912년 7월 30일까지의 시대를 말합니다. 일본이 서양 열강에 뒤지지 않기 위해 근대 국가로 성장해나간 시대.</p>
 					</div>
 					<div class="glossaryIndiv2 glossaryIndiv">
-						<p class="name">二十世紀の豫言</p>
-						<p class="text">1901年(明治34年)1月2、3日に、新聞に掲載された、二十世紀に実現されるであろう23項目を予想した記事。</p>
+						<p class="name">20세기에 대한 예언</p>
+						<p class="text">1901년(메이지 34년) 1월 2, 3일에 신문에 게재된 20세기에 실현될 23개 항목을 예상한 기사.</p>
 					</div>
 					<div class="glossaryIndiv3 glossaryIndiv">
-						<p class="name">尋常小学校</p>
-						<p class="text">1886年(明治19年)に設置された初等普通教育を施す学校。当時の修業年数は4年間であったが、1907年(明治40年)には6年に延長された。1941年(昭和16年)に国民学校へ改組され、この名称は消えた。</p>
+						<p class="name">진죠소학교</p>
+						<p class="text">1886년(메이지 19년)에 설치된 초등 보통교육을 실시하는 학교. 당시 수업연수는 4년이었지만, 1907년(메이지 40년)에는 6년으로 연장되었습니다. 1941년(쇼와 16년)에 국민학교로 개편되면서 이 명칭은 사라졌습니다.</p>
 					</div>
 					<div class="glossaryIndiv4 glossaryIndiv">
-						<p class="name">抜け参り</p>
-						<p class="text">江戸時代に流行した、伊勢神宮への集団参詣(お蔭参り)が発端になり派生した風習。奉公人が主人に、子供が親に対して無断で伊勢神宮へ参詣すること。伊勢神宮への参詣は尊いものと考えられ、奉公人や親は容認しなければいけない風潮があったとされる。</p>
+						<p class="name">누케마이리</p>
+						<p class="text">에도시대에 유행한 이세신궁에 집단 참배가 발단이 되어 파생된 풍습. 하인이 주인에 대해, 아이가 부모에 대해 무단으로 이세 신궁에 참배하는 것입니다. 이세신궁에 참배하는 것은 존귀한 것이라고 생각되어 하인이나 부모는 용인하지 않으면 안 되는 풍조가 있었다고 여겨집니다.</p>
 					</div>
 					<div class="glossaryIndiv5 glossaryIndiv">
-						<p class="name">内国勧業博覧会</p>
-						<p class="text">明治時代に、近代化促進のために開催された日本独自の博覧会。農作物から機械類まで多くの珍品、名品が出品された。第三回までは東京上野公園、第四回は京都市、第五回は大阪・天王寺で開催された。</p>
+						<p class="name">국내권업박람회</p>
+						<p class="text">메이지 시대에 근대화 촉진을 위해 개최된 일본 고유의 박람회. 농작물부터 기계류까지 많은 진품, 명품이 출품되었습니다. 제3회까지는 도쿄 우에노 공원, 제4회는 교토시, 제5회는 오사카 덴노지에서 개최되었습니다.</p>
 					</div>
 					<div class="glossaryIndiv6 glossaryIndiv">
 						<p class="name">あんじょう</p>
