--- a/glossary.html
+++ b/glossary.html
@@ -123,39 +123,39 @@
 					</div>
 					<div class="glossaryIndiv6 glossaryIndiv">
 						<p class="name">あんじょう</p>
-						<p class="text">関西の方言の一つ。「いい具合に」、「具合よく」というニュアンスで使われる。</p>
+						<p class="text">간사이 방언의 하나. 「마침 알맞게」,「좋게」라는 늬앙스로 쓰입니다.</p>
 					</div>
 					<div class="glossaryIndiv7 glossaryIndiv">
-						<p class="name"><ruby>蝋管<rt>ろうかん</rt></ruby>蓄音機</p>
-						<p class="text">円柱型の蝋管に音の空気振動で溝を刻むことで、音を録音再生する機械。刻まれた溝を針でなぞることで再生できる。</p>
+						<p class="name"><ruby>납관축음기</p>
+						<p class="text">원기둥 모양의 납관에 소리의 공기 진동으로 홈을 새김으로써 소리를 녹음 재생하는 기계. 새겨진 홈을 바늘로 덧대면 다시 쓸 수 있습니다.</p>
 					</div>
 					<div class="glossaryIndiv8 glossaryIndiv">
-						<p class="name"><ruby>陸<rt>おか</rt></ruby>蒸気</p>
-						<p class="text">明治時代の蒸気機関車の呼称。</p>
+						<p class="name"><ruby>육증기</p>
+						<p class="text">메이지 시대의 증기기관차라는 호칭.</p>
 					</div>
 					<div class="glossaryIndiv9 glossaryIndiv">
 						<p class="name">せんどした</p>
-						<p class="text">関西の方言で「何度も」「散々」という意味があるが、滋賀県では「飽きる」「くたびれる」という意味でも使われる。</p>
+						<p class="text">간사이의 방언으로 「몇번이나」「지친다」라고 하는 의미가 있지만, 시가현에서는 「지겹다」「지친다」라고 하는 의미로도 사용됩니다.</p>
 					</div>
 					<div class="glossaryIndiv10 glossaryIndiv">
-						<p class="name">夜学会</p>
-						<p class="text">日中は様々な理由により正規の教育を受けられなかった子供たちのために開かれていた夜間の勉強会。喜八たちのように自主的に開かれていたものもあった。</p>
+						<p class="name">야학회</p>
+						<p class="text">낮에는 다양한 이유로 정규 교육을 받지 못한 아이들을 위해 열리던 야간 공부 모임. 키하치의 모임처럼 자체적으로 열린 것도 있었습니다.</p>
 					</div>
 					<div class="glossaryIndiv11 glossaryIndiv">
-						<p class="name"><ruby>檸檬<rt>れもん</rt></ruby>発電</p>
-						<p class="text">レモンに亜鉛版と銅板を差し込むことで、簡易な電池を作ることができる。クエン酸を含むレモン果汁が電解質となり、亜鉛から放出された電子が銅板に流れることで電力が生み出される。</p>
+						<p class="name"><ruby>레몬 발전</p>
+						<p class="text">레몬에 아연판과 동판을 꽂는 것으로, 간이 배터리를 만들 수 있습니다. 구연산을 포함한 레몬즙이 전해질이 되어, 아연으로부터 방출된 전자가 동판으로 흐르는 것으로 전력이 만들어집니다.</p>
 					</div>
 					<div class="glossaryIndiv12 glossaryIndiv">
-						<p class="name"><ruby>祝言<rt>しゅうげん</rt></ruby></p>
-						<p class="text">結婚式、または婚姻を祝う場のこと。</p>
+						<p class="name"><ruby>혼례</p>
+						<p class="text">결혼식 또는 혼인을 축하하는 자리.</p>
 					</div>
 					<div class="glossaryIndiv13 glossaryIndiv">
-						<p class="name"><ruby>藪<rt>やぶ</rt></ruby>入り</p>
-						<p class="text">江戸時代に広がった風習で、住み込みの奉公人が家に帰ること。旧暦の正月である1月16日とお盆である7月16日がその日にあたった。明治時代以降まで続いたとされている。</p>
+						<p class="name"><ruby>야부이리</p>
+						<p class="text">에도 시대에 퍼진 풍습으로, 거주하던 하인이 집으로 돌아가는 것을 말합니다. 음력 설날인 1월 16일과 추석인 7월 16일이 그 날에 해당되었습니다. 메이지시대 이후까지 계속되었다고 합니다.</p>
 					</div>
 					<div class="glossaryIndiv14 glossaryIndiv">
-						<p class="name"><ruby>杜氏<rt>とうじ</rt></ruby></p>
-						<p class="text">酒造りに従事する職人の総責任者を指す。杜氏の指揮下で働く人々を<ruby>蔵人<rt>くらびと</rt></ruby>と呼ぶ。</p>
+						<p class="name"><ruby>杜氏</p>
+						<p class="text">술 제조에 종사하는 장인의 총책임자를 가리킵니다. 杜氏 아래에서 일하는 사람들을 働く人이라고 부릅니다.</p>
 					</div>
 					<div class="glossaryIndiv15 glossaryIndiv">
 						<p class="name"><ruby>麹室<rt>こうじむろ</rt></ruby></p>
