--- a/glossary.html
+++ b/glossary.html
@@ -94,7 +94,7 @@
 				</div>
 			</div>
 			<div class="glossary lowerItem">
-				<p class="glossaryNotes">*이하, 작품에서의 등장순서로 되어 있습니다.</p>
+				<p class="glossaryNotes">*이하, 작품에서의 등장순서로 되어 있습니다. 번역기를 사용했기에 참고만 해주시면 감사하겠습니다.</p>
 				<div class="glossaryNezumiBox">
 					<p class="glossaryNezumi">
 						<img src="/glossaryNezumi.png">
@@ -158,32 +158,32 @@
 						<p class="text">술 제조에 종사하는 장인의 총책임자를 가리킵니다. 杜氏 아래에서 일하는 사람들을 働く人이라고 부릅니다.</p>
 					</div>
 					<div class="glossaryIndiv15 glossaryIndiv">
-						<p class="name"><ruby>麹室<rt>こうじむろ</rt></ruby></p>
-						<p class="text">日本酒の製造に必要不可欠な米麹を生育するため、適切な湿度と温度に保たれた部屋。かつては女人禁制という風潮が存在した。</p>
+						<p class="name"><ruby>부실</p>
+						<p class="text">일본주 제조에 필수적인 쌀누룩을 생육하기 위해 적절한 습도와 온도로 유지된 방. 과거에는 금녀 풍조가 존재했습니다.</p>
 					</div>
 					<div class="glossaryIndiv16 glossaryIndiv">
-						<p class="name"><ruby>幻燈機<rt>げんとうき</rt></ruby></p>
-						<p class="text">絵を描いたガラスやフィルムに光源(ランプやろうそくなど)を透過させることで、絵を投影する装置のこと。</p>
+						<p class="name"><ruby>환등기</p>
+						<p class="text">그림을 그린 유리나 필름에 광원(램프나 촛불 등)을 투과시켜 그림을 투영하는 장치입니다.</p>
 					</div>
 					<div class="glossaryIndiv17 glossaryIndiv">
-						<p class="name">インクライン</p>
-						<p class="text">川の傾斜が大きいために船が運航できない区間で敷設された、船を運ぶための傾斜鉄道のこと。京都の墨染や蹴上のものが有名。</p>
+						<p class="name">인클라인</p>
+						<p class="text">강의 경사가 크기 때문에 배가 운항할 수 없는 구간에서 부설된 배를 운반하기 위한 경사 철도입니다. 교토의 스미조메나 케아게의 것이 유명합니다.</p>
 					</div>
 					<div class="glossaryIndiv18 glossaryIndiv">
-						<p class="name">三上山</p>
-						<p class="text">滋賀県野洲市にある山。標高は432m。稜線の美しさから「近江富士」と呼ばれている。また、藤原秀郷による大ムカデ退治伝説から「ムカデ山」の異名も持つ。</p>
+						<p class="name">미카미야마</p>
+						<p class="text">시가현 야스시에 있는 산. 해발고도는 432 m입니다. 능선의 아름다움 때문에 「오미후지」라고 불리고 있습니다. 또, 후지와라 히데사토의 전설로부터 「무카데야마」이라는 별명도 있습니다.</p>
 					</div>
 					<div class="glossaryIndiv19 glossaryIndiv">
-						<p class="name"><ruby>内湖<rt>ないこ</rt></ruby></p>
-						<p class="text">かつて琵琶湖の周りに点在した水深2m程の小さな湖。明治から昭和初期までで40か所ほど確認されていたが、1942年(昭和17年)から始まった<ruby>干拓<rt>かんたく</rt></ruby>事業により大幅に減少した。</p>
+						<p class="name"><ruby>나이코</p>
+						<p class="text">예전에 비와호 주위에 점재했던 수심 2m 정도의 작은 호수입니다. 메이지 시대부터 쇼와 초기까지 40개소가 확인되었으나, 1942년(쇼와 17년)부터 시작된 간척사업으로 크게 줄었습니다.</p>
 					</div>
 					<div class="glossaryIndiv20 glossaryIndiv">
-						<p class="name"><ruby>陰匿善事<rt>いんとくぜんじ</rt></ruby></p>
-						<p class="text">近江商人の心得の一つ。人が見ていなくても、人のために尽くしなさいという意味。名前を売ったり、見返りを求めるために善い行いをするのではないという意味が込められている。</p>
+						<p class="name"><ruby>은닉선사</p>
+						<p class="text">오미 상인의 마음가짐 중 하나. 다른 사람이 보지 않더라도 남을 위해 힘쓰라는 뜻입니다. 이름을 팔거나 대가를 구하기 위해 선행을 하는 것이 아니라는 의미를 가지고 있습니다.</p>
 					</div>
 					<div class="glossaryIndiv21 glossaryIndiv">
-						<p class="name"><ruby>厨子<rt>ずし</rt></ruby></p>
-						<p class="text">仏像などを保管する、両開きの扉がついた仏具。</p>
+						<p class="name"><ruby>즈시</p>
+						<p class="text">불상 등을 보관하고 쌍바라지 문이 달린 불구.</p>
 					</div>
 				</div>
 
