--- a/sample.html
+++ b/sample.html
@@ -96,7 +96,9 @@
 			<div class="sample lowerItem">
 				<div class="sampleBox lowerBox">
                                         </p>
-                                        <div class="sampleNezumi"><img src="/sampleNezumi.png"></div>
+                                        <div class="sampleNezumi"><img src="/sampleNezumi.png"></div>	
+				        </p>
+                                        <div class="image"><img src="/konata.gif"></div>
                                         </p>                                    
                                         <div class="sampleBoxSale">
                                                 <p class="name">「20세기 전기목록」 츄라이 츄라이!</p>
